freeaccess sur les disciplines

--- a/app/Resources/views/cours/oneAdmin.html.twig
+++ b/app/Resources/views/cours/oneAdmin.html.twig
@@ -76,6 +76,7 @@
 
             CKEDITOR.config.entities = false;
             CKEDITOR.config.entities_latin = false;
+            CKEDITOR.config.extraPlugins = 'colorbutton';
 
             let config = {
                 configname: "lightConfig",
