--- a/app/Resources/views/cours/oneAdmin.html.twig
+++ b/app/Resources/views/cours/oneAdmin.html.twig
@@ -77,6 +77,7 @@
             CKEDITOR.config.entities = false;
             CKEDITOR.config.entities_latin = false;
             CKEDITOR.config.extraPlugins = 'colorbutton';
+            CKEDITOR.config.extraPlugins = 'sourcedialog';
 
             let config = {
                 configname: "lightConfig",
@@ -123,7 +124,7 @@
                         {name: 'styles', items: ['Format', 'Font', 'FontSize']},
                         {name: 'colors', items: ['TextColor', 'BGColor']},
                         {name: 'tools', items: ['Maximize', 'ShowBlocks']},
-                        {name: 'switch', items: ['Switch']}
+                        {name: 'switch', items: ['Switch', 'Source']}
                     ],
                 height: 200,
                 allowedContent: true
