Ajouts de statistiques de fréquentation avec graphiques

--- a/app/Resources/views/stats/frequentationSite.html.twig
+++ b/app/Resources/views/stats/frequentationSite.html.twig
@@ -13,20 +13,8 @@
     <script>
         jQuery(document).ready(function () {
 
-            var datas = {{ freeAccessStats|json_encode|raw }};
-            var formatedDatas = [
-                {x: '16/03', y: 360},
-                {x: '17/03', y: 440},
-                {x: '18/03', y: 1250},
-                {x: '19/03', y: 880},
-                {x: '20/03', y: 1150},
-                {x: '21/03', y: 475},
-                {x: '22/03', y: 450},
-                {x: '23/03', y: 2102},
-                {x: '24/03', y: 1509},
-                {x: '25/03', y: 1252},
-                {x: '26/03', y: 958}
-            ];
+            var datas = {{ logins|json_encode|raw }};
+            var formatedDatas = [];
             for (var item in datas) {
                 formatedDatas.push({x: item, y: datas[item]});
             }
@@ -38,7 +26,7 @@
                     data:    {
                         datasets: [
                             {
-                                label: "Visites",
+                                label: "Logins",
                                 data: formatedDatas,
                                 fill: false,
                                 borderColor: 'red'
