--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -249,7 +249,10 @@
                                             <li><a href="{{ path('devoirsManag') }}">Des devoirs</a></li>
                                             <li><a href="{{ path('usersManag') }}">Des utilisateurs</a></li>
                                             <li><a href="{{ path('notifsManag') }}">Des notifications</a></li>
-                                            <li><a href="{{ path('frequentation') }}">Des clics</a></li>
+                                            {% if template == 'afadec' %}
+                                                <li><a href="{{ path('frequentation') }}">Des clics</a></li>
+                                            {% endif %}
+                                            <li><a href="{{ path('frequentationSite') }}">De la fréquentation</a></li>
                                         </ul>
                                     </li>
                                     <li><a target="_blank" href="{{ path('sonata_admin_dashboard') }}">BackOffice</a>
