--- a/app/Resources/views/stats/frequentationSite.html.twig
+++ b/app/Resources/views/stats/frequentationSite.html.twig
@@ -13,11 +13,18 @@
     <script>
         jQuery(document).ready(function () {
 
-            var datas = {{ logins|json_encode|raw }};
-            var formatedDatas = [];
-            for (var item in datas) {
-                formatedDatas.push({x: item, y: datas[item]});
+            var logins = {{ logins|json_encode|raw }};
+            var formatedLogins = [];
+            for (var item in logins) {
+                formatedLogins.push({x: item, y: logins[item]});
             }
+
+            var coursAcces = {{ coursAcces|json_encode|raw }};
+            var formatedCoursAcces = [];
+            for (item in coursAcces) {
+                formatedCoursAcces.push({x: item, y: coursAcces[item]});
+            }
+
             if($('#chart2build').length){
                 var timeFormat = 'DD/MM';
 
@@ -27,9 +34,15 @@
                         datasets: [
                             {
                                 label: "Logins",
-                                data: formatedDatas,
+                                data: formatedLogins,
                                 fill: false,
                                 borderColor: 'red'
+                            },
+                            {
+                                label: "Accès à un cours",
+                                data: formatedCoursAcces,
+                                fill: false,
+                                borderColor: 'blue'
                             }
                         ]
                     },
