debug filtres tablesorter

--- a/app/Resources/views/ressources/oneDevoir.html.twig
+++ b/app/Resources/views/ressources/oneDevoir.html.twig
@@ -38,7 +38,10 @@
                     widgets: ['zebra', 'filter', 'output'],
                     widgetOptions: {
                         output_delivery: 'd',
-                        output_saveFileName: 'mytable.csv'
+                        output_saveFileName: 'mytable.csv',
+                        filter_excludeFilter: {
+                            '*': 'range'
+                        }
                     }
                 })
                 .tablesorterPager({
