--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -19,6 +19,15 @@
 {% endblock %}
 
 {% block main %}
+    <script>
+        var chrono;
+        jQuery(document).ready(function () {
+            $('.startIframe').click(function(){
+                $(this).hide();
+                $('.startIframe2Start').show().click();
+            });
+        });
+    </script>
 
     <div class="container mb-60 mt-20">
         <div class="row mt-20">
@@ -53,11 +62,14 @@
                     </h4>
                     <iframe class="" width="100%" height="430" frameborder="0" allowfullscreen=""
                             mozallowfullscreen="" webkitallowfullscreen=""
-                            src="https://player.vimeo.com/video/123835230"></iframe>#}
+                            src="https://player.vimeo.com/video/123835230"></iframe>
                     <a class="freeAccessBtn" style="max-width: 95%; display: inline-block" href="{{ path('myCourses') }}">
                         <img style="max-width: 100%;" src="{{ asset('images/accueil/corona-afadec.png?v2') }}" />
                     </a>
+                    #}
 
+                    <img class="startIframe" style="max-width: 100%;" src="{{ asset('images/accueil/powtoon.jpg') }}" />
+                    <iframe class="startIframe2Start" style="display: none;" width="100%" height="430" src="https://www.powtoon.com/embed/d3I1BMFqOc6/" frameborder="0"></iframe>
                 {% elseif template == "excellencePro" %}
                     <video controls poster="{{ asset('images/accueil/excellencePro.jpg') }}" style="width: 100%">
                         <source src="{{ asset('images/accueil/generique_excellence.mp4') }}" type="video/mp4">
