--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -69,7 +69,8 @@
                     #}
 
                     <img class="startIframe" style="max-width: 100%;" src="{{ asset('images/accueil/powtoon.jpg') }}" />
-                    <iframe class="startIframe2Start" style="display: none;" width="100%" height="430" src="https://www.powtoon.com/embed/d3I1BMFqOc6/" frameborder="0"></iframe>
+                    {#<iframe class="startIframe2Start" style="display: none;" width="100%" height="430" src="https://www.powtoon.com/embed/d3I1BMFqOc6/" frameborder="0"></iframe>
+                    #}<iframe class="startIframe2Start" style="display: none;" width="100%" height="430" src="https://www.powtoon.com/embed/f1Ik8q0F1dK/" frameborder="0"></iframe>
                 {% elseif template == "excellencePro" %}
                     <video controls poster="{{ asset('images/accueil/excellencePro.jpg') }}" style="width: 100%">
                         <source src="{{ asset('images/accueil/generique_excellence.mp4') }}" type="video/mp4">
