--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -57,20 +57,20 @@
                     </h4>-->
 
                     {#<img style="max-width: 100%;" src="{{ asset('images/accueil/afadec_noel2019.jpg') }}" />#}
-                    {#<h4 class="heading pt-20 text-center mb-0">DÉCOUVREZ L’AFADEC <span
+                    <h4 class="heading pt-20 text-center mb-0">DÉCOUVREZ L’AFADEC <span
                                 class="color2">EN 2 MINUTES</span>
                     </h4>
                     <iframe class="" width="100%" height="430" frameborder="0" allowfullscreen=""
                             mozallowfullscreen="" webkitallowfullscreen=""
                             src="https://player.vimeo.com/video/123835230"></iframe>
-                    <a class="freeAccessBtn" style="max-width: 95%; display: inline-block" href="{{ path('myCourses') }}">
+                    {#<a class="freeAccessBtn" style="max-width: 95%; display: inline-block" href="{{ path('myCourses') }}">
                         <img style="max-width: 100%;" src="{{ asset('images/accueil/corona-afadec.png?v2') }}" />
-                    </a>
-                    #}
+                    </a>#}
 
-                    <img class="startIframe" style="max-width: 100%;" src="{{ asset('images/accueil/powtoon.jpg') }}" />
-                    {#<iframe class="startIframe2Start" style="display: none;" width="100%" height="430" src="https://www.powtoon.com/embed/d3I1BMFqOc6/" frameborder="0"></iframe>
-                    #}<iframe class="startIframe2Start" style="display: none;" width="100%" height="430" src="https://www.powtoon.com/embed/f1Ik8q0F1dK/" frameborder="0"></iframe>
+
+                    {#<img class="startIframe" style="max-width: 100%;" src="{{ asset('images/accueil/powtoon.jpg') }}" />
+                    <iframe class="startIframe2Start" style="display: none;" width="100%" height="430" src="https://www.powtoon.com/embed/d3I1BMFqOc6/" frameborder="0"></iframe>
+                    <iframe class="startIframe2Start" style="display: none;" width="100%" height="430" src="https://www.powtoon.com/embed/f1Ik8q0F1dK/" frameborder="0"></iframe>#}
                 {% elseif template == "excellencePro" %}
                     <video controls poster="{{ asset('images/accueil/excellencePro.jpg') }}" style="width: 100%">
                         <source src="{{ asset('images/accueil/generique_excellence.mp4') }}" type="video/mp4">
