Module de désactivation groupée d'utilisateurs

--- a/app/Resources/views/pagesFixes/desactivationGroupe.html.twig
+++ b/app/Resources/views/pagesFixes/desactivationGroupe.html.twig
@@ -72,7 +72,7 @@
                             {% if user[2] == 'desactive' %}
                                 <p class="green">Utilisateur désactivé</p>
                             {% elseif user[2] == 'doublon' %}
-                                <p class="red">Doublon</p>
+                                <p class="red">Erreur : doublon</p>
                             {% elseif user[2] == 'inexistant' %}
                                 <p class="red">Utilisateur inexistant</p>
                             {% endif %}
