Module de désactivation groupée d'utilisateurs

--- a/app/Resources/views/pagesFixes/desactivationGroupe.html.twig
+++ b/app/Resources/views/pagesFixes/desactivationGroupe.html.twig
@@ -5,7 +5,7 @@
         <div class="container">
             <h2 class="color3">L’AFADEC</h2>
             <ul class="breadcrumb">
-                <li class="color3">Ajoutez un fichier CSV</li>
+                <li class="color3">Désactivation de membres à partir d'un fichier CSV</li>
             </ul>
         </div>
     </div>
