--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -56,13 +56,13 @@
                                 class="color2">dans l’Espérance…</span>
                     </h4>-->
 
-                    {#<img style="max-width: 100%;" src="{{ asset('images/accueil/afadec_noel2019.jpg') }}" />#}
-                    <h4 class="heading pt-20 text-center mb-0">DÉCOUVREZ L’AFADEC <span
+                    <img style="max-width: 100%;" src="{{ asset('images/accueil/essai1.gif') }}" />
+                    {#<h4 class="heading pt-20 text-center mb-0">DÉCOUVREZ L’AFADEC <span
                                 class="color2">EN 2 MINUTES</span>
                     </h4>
                     <iframe class="" width="100%" height="430" frameborder="0" allowfullscreen=""
                             mozallowfullscreen="" webkitallowfullscreen=""
-                            src="https://player.vimeo.com/video/123835230"></iframe>
+                            src="https://player.vimeo.com/video/123835230"></iframe>#}
                     {#<a class="freeAccessBtn" style="max-width: 95%; display: inline-block" href="{{ path('myCourses') }}">
                         <img style="max-width: 100%;" src="{{ asset('images/accueil/corona-afadec.png?v2') }}" />
                     </a>#}
