--- a/app/Resources/views/cours/filAriane.html.twig
+++ b/app/Resources/views/cours/filAriane.html.twig
@@ -1,4 +1,4 @@
-{% if hasReferentMinRights %}
+{% if hasReferentMinRights is defined %}
 <div class="menuDiscCourses" style="display: block;">
     <div class="btnMenuDiscCourses">
         <i class="fa fa-bars"></i>
