--- a/app/Resources/views/cours/oneAdmin.html.twig
+++ b/app/Resources/views/cours/oneAdmin.html.twig
@@ -1450,7 +1450,7 @@
 
                 //console.log(steps + upload_srcSteps + upload_course + folderLocation)
                 $('#itemUpload').fileupload({
-                    url: steps + upload_course + folderLocation,
+                    url: steps + upload_srcSteps + upload_course + folderLocation,
                     dropZone: null,
                     dataType: 'json',
                     add: function (e, data) {
