--- a/app/Resources/views/cours/oneAdmin.html.twig
+++ b/app/Resources/views/cours/oneAdmin.html.twig
@@ -1396,13 +1396,6 @@
                 $('#ressourcesAdmin a').click();
             }
 
-            /*
-    steps: '../'
-    upload_srcSteps: '../'
-    folderLocation: 'var/upload/'
-    upload_course: '../../'
-             */
-
             // upload d'un fichier pour un lien
             function uploadLinkFile(lienId, refresh, idSection) {
                 let coursId = $('[data-coursId]').attr('data-coursId');
@@ -1413,8 +1406,7 @@
                 $('.modal .modal-body[data-contentModal=uploadFile]').attr('data-idItem', lienId).show();
 
                 // si le folder n'existe pas, on le créé
-                let url = steps + folderLocation + coursId + '/lien/' + lienId + '/';
-                console.log("checkDirForUploadFile_ajax : "+url)
+                let url = 'upload/' + coursId + '/lien/' + lienId + '/';
                 $.ajax({
                     type: 'POST',
                     url: "{{ path('checkDirForUploadFile_ajax') }}",
@@ -1448,9 +1440,8 @@
                     '</div>'
                 );
 
-                console.log("upload destination : " + steps + upload_srcSteps + upload_course + folderLocation)
                 $('#itemUpload').fileupload({
-                    url: steps + upload_srcSteps + upload_course + folderLocation,
+                    url: "/upload/index.php",
                     dropZone: null,
                     dataType: 'json',
                     add: function (e, data) {
@@ -1475,10 +1466,9 @@
                                 data: {
                                     itemId: lienId,
                                     type: file.type,
-                                    url: steps + folderLocation + myUrlTab[1],
+                                    filenameUrl: myUrlTab[0],
                                     urlDest: url,
                                     unzipIfZip: $('[data-champName=unzipUploaded]').prop('checked'),
-                                    currentUrl: window.location.pathname
                                 },
                                 success: function (data) {
                                     $('.modal').modal('toggle');
@@ -1529,8 +1519,7 @@
                     titreDefaut = "Corrigé type du devoir";
                 }
                 let rand = Math.floor((Math.random() * 10000) + 1);
-                let url = steps + folderLocation + coursId + '/devoir/' + devoirId + '/' + typeItem + '/' + rand + '/';
-
+                let url = 'upload/' + coursId + '/devoir/' + devoirId + '/' + typeItem + '/' + rand + '/';
                 $.ajax({
                     type: 'POST',
                     url: "{{ path('checkDirForUploadFile_ajax') }}",
